--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "jest --watch"
   },
   "dependencies": {
+    "@graphcms/rich-text-html-renderer": "^0.2.0",
     "@graphcms/rich-text-react-renderer": "^0.6.1",
     "graphql": "^16.6.0",
     "graphql-request": "^5.0.0",
